--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@strapi/plugin-graphql": "^4.4.3",
     "@strapi/plugin-i18n": "4.4.3",
+    "@strapi/plugin-seo": "^1.7.6",
     "@strapi/plugin-users-permissions": "4.4.3",
     "@strapi/strapi": "4.4.3",
     "pg": "^8.8.0",
-    "pg-connection-string": "^2.5.0"
+    "pg-connection-string": "^2.5.0",
+    "yarn": "^1.22.19"
   },
   "author": {
     "name": "A Strapi developer"
