--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-i18n": "4.4.3",
     "@strapi/plugin-seo": "^1.7.6",
     "@strapi/plugin-users-permissions": "4.4.3",
+    "@strapi/provider-upload-cloudinary": "^4.5.0",
     "@strapi/strapi": "4.4.3",
     "pg": "^8.8.0",
     "pg-connection-string": "^2.5.0",
